Create a hook to record the audio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["dataavailable", "tailwindcss", "vitejs"],
+  "cSpell.words": ["dataavailable", "nodownload", "tailwindcss", "vitejs"],
   "css.customData": [".vscode/tailwind.json"]
 }
